edit text on main page

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -6,7 +6,15 @@
 <div class="flex w-full flex-col md:flex-row p-4">
     <div class="flex flex-col w-full md:w-1/2">
         <h1 class="title uppercase mb-7">ПАРАЦЕЛЬС</h1>
-        <p class="sub-text text-white mb-7">Равным образом дальнейшее развитие различных форм деятельности требуют от нас анализа новых предложений. Рамки и место обучения кадров в значительной степени обуславливает создание модели развития.</p>
+        <p class="text-xl text-white mb-7">
+                Добро пожаловать в ваш персональный медицинский календарь!
+            <br><br>
+                Делайте записи о своем самочувствии, принимаемых лекарствах, изменениях в образе жизни и любых симптомах, которые заметили. 
+            Создавайте заметки, предназначенные для вашего врача. Описывайте изменения в вашем состоянии здоровья, ставьте вопросы и делитесь своими беспокойствами.
+            <br>
+                Ваше здоровье в ваших руках. Начнем вместе следить за ним!
+        </p>
+
         <div class="flex w-1/2">
             <a href="{% url 'main:registration' %}"class="join-btn text-white px-4 py-2 rounded-md drop-shadow-md font-medium">Присоединиться</a>
         </div>
