--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,22 +1,3 @@
-@font-face {
-  font-family: "JetBrains";
-  src: url(/static_root/fonts/JetBrains/JetBrainsMono-Regular.ttf); }
-
-a,
-p,
-h1,
-.h1,
-h2,
-.h2,
-h3,
-.h3,
-h4,
-.h4,
-span,
-ul,
-li {
-  font-family: "Jetbrains"; }
-
 /*!
    * Bootstrap  v5.3.2 (https://getbootstrap.com/)
    * Copyright 2011-2023 The Bootstrap Authors
@@ -9361,5 +9342,8 @@ html {
   background: rgba(255, 255, 255, 0.5);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   backdrop-filter: blur(2px); }
+
+.has-notes {
+  background-color: red; }
 
 /*# sourceMappingURL=styles.css.map */
