--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -29,6 +29,7 @@
     <div id="vue-add-note">
     {% include "main/includes/modal-create-note.html" %}
     {% include "main/includes/modal-user-notes.html" %}
+    {% include "main/includes/modal-create-group.html" %}
     </div>
     
     {% block content %}{% endblock %}
