--- a/main/templates/main/calendar-pacient.html
+++ b/main/templates/main/calendar-pacient.html
@@ -2,6 +2,8 @@
 {% load static %}
 
 {% block content %}
+
+
 <div id="vue-calendar">
 <div class="container mx-auto mt-10"> 
     <div class="wrapper bg-white rounded shadow w-full"> 
@@ -9,6 +11,9 @@
             <span class="text-lg font-bold" id="currentMonthYear"> 
                 <!-- Текущий месяц и год будут здесь --> 
             </span> 
+            
+            <p>Снилс: {{ pacient }}</p>
+            <p></p>
             <div class="buttons"> 
                 <button class="p-1" id="prevMonth"> 
                     <svg width="1em" fill="gray" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-left-circle" fill="currentColor" xmlns="http://www.w3.org/2000/svg"> 
