--- a/main/templates/main/patients-doctor.html
+++ b/main/templates/main/patients-doctor.html
@@ -11,7 +11,7 @@
 </div>
 
 <div class="container">
-    <button class="create-group px-4 py-2 mt-8">Создать группу</button>
+    <button id="create-group" class="create-group px-4 py-2 mt-8">Создать группу</button>
 </div>
 
 <div class="py-10">
