--- a/main/templates/main/calendar-pacient.html
+++ b/main/templates/main/calendar-pacient.html
@@ -12,7 +12,7 @@
                 <!-- Текущий месяц и год будут здесь --> 
             </span> 
             
-            <p>Снилс: {{ pacient }}</p>
+            <p>{{ pacient }}</p>
             <p></p>
             <div class="buttons"> 
                 <button class="p-1" id="prevMonth"> 
