--- a/main/templates/main/includes/modal-choose.html
+++ b/main/templates/main/includes/modal-choose.html
@@ -1,11 +1,39 @@
 {% load static %}
-<div id="chooseModal" class=" note-modal container modal hidden fixed inset-0 z-50 overflow-auto flex items-center justify-center">
+<div id="chooseModal"
+     class=" note-modal container modal hidden fixed inset-0 z-50 overflow-auto flex items-center justify-center">
     <div class="modal-content bg-white w-full p-8 rounded-lg max-h-60 lg:max-h-auto overflow-y-auto">
         <span class="close close-create-modal text-gray-500 cursor-pointer absolute top-4 right-4 text-2xl">&times;</span>
-       
-            <button type="button" id="change" @click="changeNote()">Изменить</button>
-            <button id="delete" @click="deleteNote()">Удалить</button>
-       
+        <button type="button"
+                id="change"
+                class="flex flex-row mb-4 justify-center place-items-center"
+                @click="changeNote()">
+            <p class="me-2">Изменить</p>
+            <svg xmlns="http://www.w3.org/2000/svg"
+                 width="16"
+                 height="16"
+                 fill="currentColor"
+                 class="bi bi-pencil-square"
+                 viewBox="0 0 16 16"
+                 style="height: 30px;
+                        width: 30px">
+                <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
+                <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z" />
+            </svg>
+        </button>
+        <button id="delete"
+                class="flex flex-row justify-center place-items-center"
+                @click="deleteNote()">
+            <p class="me-2">Удалить</p>
+            <svg xmlns="http://www.w3.org/2000/svg"
+                 width="16"
+                 height="16"
+                 fill="currentColor"
+                 class="bi bi-x-lg"
+                 viewBox="0 0 16 16"
+                 style="height: 30px;
+                        width: 30px">
+                <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8z" />
+            </svg>
+        </button>
     </div>
 </div>
-
