--- a/main/templates/main/patients-doctor.html
+++ b/main/templates/main/patients-doctor.html
@@ -10,9 +10,9 @@
     </div>
 </div>
 
-<div class="container">
+{% comment %} <div class="container">
     <button class="create-group px-4 py-2 mt-8">Создать группу</button>
-</div>
+</div> {% endcomment %}
 
 <div class="py-10">
     <table id="myDataTable" class="display">
