--- a/main/templates/main/user-calendar.html
+++ b/main/templates/main/user-calendar.html
@@ -4,33 +4,37 @@
 {% block content %}
 <div id="vue-calendar">
 <div class="container mx-auto mt-10"> 
-    <div class="wrapper bg-white rounded shadow w-full"> 
-        <div class="header flex justify-between border-b p-2"> 
-            <span class="text-lg font-bold" id="currentMonthYear"> 
-                <!-- Текущий месяц и год будут здесь --> 
-            </span> 
-            <div class="buttons"> 
-                <button class="p-1" id="prevMonth"> 
-                    <svg width="1em" fill="gray" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-left-circle" fill="currentColor" xmlns="http://www.w3.org/2000/svg"> 
-                        <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/> 
-                        <path fill-rule="evenodd" d="M8.354 11.354a.5.5 0 0 0 0-.708L5.707 8l2.647-2.646a.5.5 0 1 0-.708-.708l-3 3a.5.5 0 0 0 0 .708l3 3a.5.5 0 0 0 .708 0z"/> 
-                        <path fill-rule="evenodd" d="M11.5 8a.5.5 0 0 0-.5-.5H6a.5.5 0 0 0 0 1h5a.5.5 0 0 0 .5-.5z"/> 
-                      </svg> 
-                </button> 
-                <button class="p-1" id="nextMonth"> 
-                    <svg width="1em" fill="gray" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-right-circle" fill="currentColor" xmlns="http://www.w3.org/2000/svg"> 
-                        <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/> 
-                        <path fill-rule="evenodd" d="M7.646 11.354a.5.5 0 0 1 0-.708L10.293 8 7.646 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0z"/> 
-                        <path fill-rule="evenodd" d="M4.5 8a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1H5a.5.5 0 0 1-.5-.5z"/> 
-                      </svg> 
-                </button> 
+    <div class="flex">
+        <div class="w-1/2">
+            <div class="wrapper bg-white rounded shadow w-full"> 
+                <div class="header flex justify-between border-b p-2"> 
+                    <span class="text-lg font-bold" id="currentMonthYear"> 
+                        <!-- Текущий месяц и год будут здесь --> 
+                    </span> 
+                    <div class="buttons"> 
+                        <button class="p-1" id="prevMonth"> 
+                            <svg width="1em" fill="gray" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-left-circle" fill="currentColor" xmlns="http://www.w3.org/2000/svg"> 
+                                <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/> 
+                                <path fill-rule="evenodd" d="M8.354 11.354a.5.5 0 0 0 0-.708L5.707 8l2.647-2.646a.5.5 0 1 0-.708-.708l-3 3a.5.5 0 0 0 0 .708l3 3a.5.5 0 0 0 .708 0z"/> 
+                                <path fill-rule="evenodd" d="M11.5 8a.5.5 0 0 0-.5-.5H6a.5.5 0 0 0 0 1h5a.5.5 0 0 0 .5-.5z"/> 
+                              </svg> 
+                        </button> 
+                        <button class="p-1" id="nextMonth"> 
+                            <svg width="1em" fill="gray" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-right-circle" fill="currentColor" xmlns="http://www.w3.org/2000/svg"> 
+                                <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/> 
+                                <path fill-rule="evenodd" d="M7.646 11.354a.5.5 0 0 1 0-.708L10.293 8 7.646 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0z"/> 
+                                <path fill-rule="evenodd" d="M4.5 8a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1H5a.5.5 0 0 1-.5-.5z"/> 
+                              </svg> 
+                        </button> 
+                    </div> 
+                </div> 
+                <table class="w-full" id="calendarTable"> 
+                    <!-- Таблица календаря будет здесь --> 
+                </table> 
+                
             </div> 
-        </div> 
-        <table class="w-full" id="calendarTable"> 
-            <!-- Таблица календаря будет здесь --> 
-        </table> 
-        
-    </div> 
+        </div>
+    </div>
 </div> 
 </div>
 <script src="{% static "js/calendar.js" %}" charset="utf-8"></script>
