--- a/main/templates/main/includes/header.html
+++ b/main/templates/main/includes/header.html
@@ -8,15 +8,15 @@
               data-dropdown-toggle="user-dropdown"
               data-dropdown-placement="bottom">
         <span class="sr-only">Open user menu</span>
-        <a href="{% url "main:profile" %}">
+        {% comment %} <a href="{% url "main:profile" %}">
           <img class="w-12 h-12 rounded-full object-cover bg-white"
-          src="{% if user.profile.pfp.url %}
+          src="{% if user.profile.pfp %}
           {{ user.profile.pfp.url }}
           {% else %}
           {% static 'img/default-profile.png' %}
           {% endif %}"
           alt="user photo">
-        </a>
+        </a> {% endcomment %}
       </button>
     <div class="flex items-center md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
       
@@ -41,21 +41,21 @@
       <ul class="flex flex-col font-medium p-4 md:p-0 mt-4 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
         <li>
           <a href="{% url "main:index" %}"
-             class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500"
+             class="block py-2 px-3 text-lg text-black bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500"
              aria-current="page">Главная</a>
         </li>
-        <li>
+        {% comment %} <li>
           <a href="{% url "main:profile" %}"
-             class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Профиль</a>
-        </li>
+             class="block py-2 px-3 text-lg text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Профиль</a>
+        </li> {% endcomment %}
         <li>
           <a href="{% url "main:user_calendar" %}"
-             class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Календарь</a>
+             class="block py-2 px-3 text-lg text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Календарь</a>
         </li>
         {% if user.is_authenticated %}
             <li>
                 <a href="{% url 'main:logout' %}"
-                   class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Выход</a>
+                   class="block py-2 px-3 text-lg text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Выход</a>
             </li>
         {% endif %}
       </ul>
