--- a/main/templates/main/includes/modal-user-notes.html
+++ b/main/templates/main/includes/modal-user-notes.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <div id="noteModal" class=" note-modal container modal hidden fixed inset-0 z-50 overflow-auto flex items-center justify-center">
-    <div class="modal-content bg-white w-full p-8 rounded-lg max-h-60 lg:max-h-auto overflow-y-auto">
+    <div class="modal-content bg-white w-1/2 p-8 rounded-lg min-h-72 lg:max-h-auto overflow-y-auto">
         <span class="close close-notes-modal text-gray-500 cursor-pointer absolute top-4 right-4 text-2xl">&times;</span>
         <div id="data-date" ref="instance" data-date=""></div>
         <div id="date">
