--- a/main/templates/main/registration.html
+++ b/main/templates/main/registration.html
@@ -6,7 +6,7 @@
 
 
 <div class="py-48 px-4 my-auto">
-    <div class="flex w-full flex-col p-4 bg-white/70 border-2 border-white rounded-3xl">
+    <div class="flex w-1/3 mx-auto flex-col p-4 bg-white/70 border-2 border-white rounded-3xl">
         <div class="w-full flex-col place-items-center justify-center text-center">
             <h2 class="text-xl uppercase mb-6">РЕГИСТРАЦИЯ</h2>
             <form role="form" method="post">
@@ -25,7 +25,7 @@
 
             </div>
             <div class="w-full mx-auto justify-center place-items-center text-center space-y-3.5">
-                <button class="reg-btn text-white px-4 py-2 rounded-md drop-shadow-md font-medium">Зарегистрироваться</button>
+                <button class="reg-btn text-white px-4 py-2 rounded-md drop-shadow-md font-medium text-xl">Зарегистрироваться</button>
                 <div class="flex flex-row place-items-center justify-center">
                     <p class="me-2">Уже есть аккаунт?</p>
                     <a href="{% url 'main:login' %}">Войти</a>
