--- a/assets/styles.css
+++ b/assets/styles.css
@@ -9340,4 +9340,7 @@ textarea.form-control-lg {
 .has-notes {
   background-color: red; }
 
+.bg {
+  background-color: #BFDBD6; }
+
 /*# sourceMappingURL=styles.css.map */
