--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -5,14 +5,6 @@
 
 
 
-// body {
-//   background-color: #006d7a;
-// }
-
-// html {
-//   background-color: #BFDBD6;
-// }
-
 .title {
   font-size: 1.625rem;
   font-style: normal;
@@ -113,4 +105,9 @@
 
 .has-notes {
   background-color: red;
+}
+
+
+.bg {
+  background-color: #BFDBD6;
 }
