--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -24,7 +24,7 @@
       });
     </script>
   </head>
-  <body class="bg-gradient-to-r from-cyan-500 to-blue-500">
+  <body class="bg">
     {% include "main/includes/header.html" %}
     <div id="vue-add-note">
       {% include "main/includes/modal-create-note.html" %}
